- Added style for side menu. - Modded backdrop component with new feature for insert custom style. - Fixed slide in and slide out menu effects. - Components z-index modded.

--- a/frontend/src/common/css/common.css
+++ b/frontend/src/common/css/common.css
@@ -3,6 +3,10 @@ html, body{
     color: white;
 }
 
+a, a:hover{
+    text-decoration: none;
+}
+
 .container-fluid{
     width: 100%;
     height: 100%;
