--- a/frontend/src/components/UI/Header/Header.css
+++ b/frontend/src/components/UI/Header/Header.css
@@ -1,3 +1,18 @@
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+li{
+    margin: 4%;
+    padding: 2%;
+    /* box-shadow: 0 2px 2px #373834; */
+}
+
+li a{
+    color: #b3b3b3;
+}
+
 .header-logo{
     height: 100px;
 }
@@ -18,11 +33,53 @@
 
 .navbar-brand{
     margin-right: 0.5%;
+    cursor: pointer;
 }
 
 .sideNavMenu{
     position: fixed;
     height: 100%;
     width: 70%;
-    z-index: 1001;
+    z-index: 1050;
+    font-size: 20px;
+}
+
+.sideNavMenuClosed{
+    left: -100px;
+}
+
+.sideNavMenuOpened{
+    left: 0;
+}
+
+.backdropStyle{
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.user-image{
+    height: 100px;
+    width: 100px;
+}
+
+.user-section{
+    margin-bottom: 5%;
+    background-color: #373834;
+    box-shadow: 0 3px 2px #373834;
+    padding: 4%;
+    color: white;
+    font-weight: 450;
+}
+
+.li-footer{
+    color: #b3b3b3;
+    position: absolute;
+    bottom: 0;
+}
+
+.signature{
+    font-size: 12px;
+    font-style: italic;
+    color: #b3b3b3;
+    margin-top: 0.5%;
+    margin-bottom: 0;
 }
