--- a/frontend/src/components/UI/Modal/ModalMessage.css
+++ b/frontend/src/components/UI/Modal/ModalMessage.css
@@ -1,5 +1,5 @@
 .modal-message{
-    z-index: 1002;
+    z-index: 2002;
     position: absolute;
 }
 
